# optional

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml
CMake/: add_custom_test.cmake  clang-tidy.cmake  compiler_options.cmake  fetch_content.cmake  thirdparty_common.cmake
include/dze/: bad_optional_access.hpp  nullopt.hpp  optional.hpp  optional_reference.hpp  sentinel.hpp
include/dze/details/: payload.hpp
test/: CMakeLists.txt  assignment.cpp  constructors.cpp  emplace.cpp  hash.cpp  in_place.cpp  make_optional.cpp  noexcept.cpp  observers.cpp  optional.hpp  optional_reference.hpp  relops.cpp  type_traits.cpp
